--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <p>On va tester notre JavaScript!</p>
 
 </body>
-<script src="script_7.js">
 
-</script>
+<script src="script_1.js"></script>
+<!-- changer le numero du script pour changer d'exo -->
+
+
 </html>
